// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component should not render because there is no previous items nor next items 1`] = `null`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: false) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="false"
    class="wrapper wrapper fill secondary medium left"
    id="prev-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="wrapper wrapper fill secondary medium right"
    id="next-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: true) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="false"
    class="wrapper wrapper fill secondary medium left"
    id="prev-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="true"
    class="wrapper wrapper fill secondary medium right isDisabled"
    id="next-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;

exports[`Navigation component should render with (prev button disabled: true) and (next button disabled: false) 1`] = `
<span
  class="group horizontal"
>
  <button
    aria-disabled="true"
    class="wrapper wrapper fill secondary medium left isDisabled"
    id="prev-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_left
      </i>
    </span>
  </button>
  <button
    aria-disabled="false"
    class="wrapper wrapper fill secondary medium right"
    id="next-btn"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        keyboard_arrow_right
      </i>
    </span>
  </button>
</span>
`;
